correct styling on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -130,11 +130,6 @@
     flex-direction: column;
     font-family: 'COCOGOOSE', sans-serif;
     z-index: 1;
-    background-image: url(./images/theme.png);
-    background-size: contain;
-    background-repeat: repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
   }
 
   .summit-description {
@@ -151,6 +146,7 @@
     font-family: "COCOGOOSE", sans-serif;
     color: #272a31;
     margin: 0.9rem;
+    z-index: 1;
   }
 
   .divider {
@@ -236,22 +232,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 20rem;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 2rem;
+    padding: 3rem;
   }
 
   .partners-header {
     font-size: 2rem;
   }
-
+  #img-separator {
+    display: block;
+  }
   .partner-logos {
-    height: 5rem;
+    height:  auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     filter: grayscale(var(--value, 100%));
-    width: 70%;
-    margin: 0.5rem;
+    flex-wrap: wrap;
+    gap: 1.1rem;
+    padding: 0.9rem;
   }
 
   .partner-logos img {
@@ -262,7 +261,6 @@
   .logo {
     height: 4rem;
     width: 4rem;
-    margin: 0;
     padding: 0;
   }
 
